@@ -41,6 +41,7 @@ Unreleased Version 2.2.0-pre
  * Feature: Add a Tablet Setup link in the start dialog.
  * Fix: Don't hide dock titlebars when pressing shift when a text field is in focus, since that might hide a field you're currently typing in. Thanks Trite for reporting.
  * Fix: Disable Hold Shift to Arrange by default, since it's not needed most of the time.
+ * Fix: Don't claim every username is taken when connecting to a server with the old login flow doesn't allow guest logins, instead tell the user that they need an account. Thanks Meru for reporting.
 
 2023-11-12 Version 2.2.0-beta.10
  * Fix: Don't deadlock on first startup. Thanks to Hail, lowontrash, FARBOL234, Dorokinyo and hamlin for reporting.
